17 Jun 2018
fix: admin/iphistory.php display

16 Jun 2018
fix: several admin pages issues

14 Jun 2018
fix: tvmaze lookup
add: clear torrent cache button on details page

13 Jun 2018
fix: remove deleted columns from query mytorrents.php
update: guzzle request in function_fanart,php
update: normalize user classes so that adding/removing most classes will not need any code changes
fix: typo
remove: redundant parked() check in forums.php
fix: faq.php output
update: ip logging false by default
update: all requests for ip, except announce and scrape, use the function getip() to facilitate logging ip true/false
fix: calling format_username() with array instead of id

12 Jun 2018
fix: friends.php

9 Jun 2018
fix: typo
update: details.php youtube to match others
fix: imdb lookup
fix: site forcing new users to https
fix: query using incorrect id
fix: classcolors.css overwrite on git pull
fix: classes.js overwrite on git pull
fix: missing ip class_check.php in query
fix: typos
fix: tracker bencode issue, you will need to manually merge this with your include/ann_config.php
update: ssluse for everything, always if using https
fix: announce.php
replace: deprecated function each()
fix: incorrect lang var
add: missing sqlerr in many forum queries
fix: bbcode code block breaking layout

8 Jun 2018
add: rounded corners to youtube
fix: youtube display
fix: class add/remove not updating AJAX Chat classes
fix: flush cache when driver is 'file'
fix: adding/removing user class not updating class colors
fix: ambiguous 'status' view_forum.php
add: missing sqlerr in many queries
fix: missing space in query view_topic.php
fix: missing global
add: AJAX Chat command takeover to allow staff to speak as BOT
add: AJAX Chat command announce to allow staff to speak as BOT and send as a PM to all users
add: missing help info to AJAX Chat commands

7 Jun 2018
fix: missing quotes
add: bin/set_perms.php script to set file permissions to 0664
add: bin/uglify.php script to process css/js files
